[package]
name = "network_channels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = { version = "0.11", default-features = false}
bytes = "1.1"
octets = "0.2"
network_core = {path = "../network_core"}
